// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MoreButton matches snapshot (empty) 1`] = `
<span
  class="more-button bp6-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp6-button bp6-disabled"
    disabled=""
    tabindex="-1"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-more"
    >
      <svg
        data-icon="more"
      />
    </span>
  </button>
</span>
`;

exports[`MoreButton matches snapshot (full) 1`] = `
<span
  class="more-button bp6-popover-target"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="bp6-button"
    title="More actions"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-more"
    >
      <svg
        data-icon="more"
      />
    </span>
  </button>
</span>
`;
